Fix link visibility

--- a/app/assets/stylesheets/navbar.css
+++ b/app/assets/stylesheets/navbar.css
@@ -396,6 +396,7 @@ header.passive-header {
     height: 50px;
     border-radius: 30px;
     width: auto;
+    z-index: 1;
   }
 
   #add-place-icon {
